- Added hash-mode: GPG (AES-128/AES-256 (SHA-512($pass)))
- Added hash-mode: MetaMask Wallet (short hash, plaintext check)
- Added hash-mode: SecureCRT MasterPassphrase v2
- Added hash-mode: Veeam VB
- Added hash-mode: bcrypt(sha256($pass))
- Added hash-mode: HMAC-RIPEMD160 (key = $pass)
- Added hash-mode: HMAC-RIPEMD160 (key = $salt)
- Added hash-mode: md5(md5($salt).md5(md5($pass)))

##
## Performance
##

- DEScrypt Kernel (1500): Improved performance from 950MH/s to 2200MH/s (RX6900XT) on HIP backend by workaround invalid compile time optimizer

##
## Bugs
##

- Fixed keys extraction in luks2hashcat - now extracts all active keys
- Prevent Hashcat from hanging by checking during startup that the output file is a named pipe
- Fixed debug mode 5 by adding the missing colon between original-word and finding-rule
- Skip generated rule that was the result of chaining rule operation and caused this generated rule to exceed the maximum number of function calls
- Fixed incorrect plaintext check for 25400 and 26610. Increased plaintext check to 32 bytes to prevent false positives.

##
## Technical
##

- AMD Driver: Updated requirements for AMD Windows drivers to "AMD Adrenalin Edition" (Adrenalin 22.5.1 exactly)
- Apple Driver: Automatically enable GPU support on Apple OpenCL instead of CPU support
- Apple Driver: Updated requirements to use Apple OpenCL API to macOS 13.0 - use
- Backend Checks: Described workaround in error message when detecting more than 64 backend devices
- Modules: Added support for non-zero IVs for -m 6800 (Lastpass). Also added `tools/lastpass2hashcat.py`
- Status Code: Add specific return code for self-test fail (-11)
- SCRYPT: Increase buffer sizes in module for hash mode 8900 to allow longer SCRYPT digests
- Unicode: Update UTF8 to UTF16 conversion to match RFC 3629

* changes v6.2.5 -> v6.2.6

##
## Algorithms
##

- Added hash-mode: Amazon AWS4-HMAC-SHA256
- Added hash-mode: Bitcoin WIF private key (P2PKH)